k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-local-ai
  namespace: demo-local-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-local-ai
  template:
    metadata:
      labels:
        app: demo-local-ai
    spec:
      containers:
      - name: app
        image: moldovean/onion-factory:v0.0.7
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: app-config
          mountPath: /app/config
        readinessProbe:
          httpGet:
            path: /api-docs
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /api-docs
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 3
      volumes:
      - name: app-config
        configMap:
          name: app-config
